--- a/views/index.hbs
+++ b/views/index.hbs
@@ -17,27 +17,33 @@
   <div class="scenario-slider ">
     <div class="scenario-list">
       <div class="scenario-item selected">
-        <img class="selected" src="https://gw.alipayobjects.com/zos/rmsportal/MnBlZZrbYBdVvXrCOyfW.svg" alt="">
+        <img class="selected" src="/img/index/Ecology-title-1.png" alt="">
+        <img src="/img/index/Ecology-title-1-default.png" alt="">
         <h4>颂车社交</h4>
       </div>
       <div class="scenario-item ">
-        <img src="https://gw.alipayobjects.com/zos/rmsportal/buKnoKlvQeEzYxttqrFh.svg" alt="">
+        <img class="selected" src="/img/index/Ecology-title-2.png" alt="">
+        <img src="/img/index/Ecology-title-2-default.png" alt="">
         <h4>汽车交易</h4>
       </div>
       <div class="scenario-item ">
-        <img src="https://gw.alipayobjects.com/zos/rmsportal/buKnoKlvQeEzYxttqrFh.svg" alt="">
+        <img class="selected" src="/img/index/Ecology-title-3.png" alt="">
+        <img src="/img/index/Ecology-title-3-default.png" alt="">
         <h4>租赁出行</h4>
       </div>
       <div class="scenario-item ">
-        <img src="https://gw.alipayobjects.com/zos/rmsportal/buKnoKlvQeEzYxttqrFh.svg" alt="">
+        <img class="selected" src="/img/index/Ecology-title-4.png" alt="">
+        <img src="/img/index/Ecology-title-4-default.png" alt="">
         <h4>颂车云盒</h4>
       </div>
       <div class="scenario-item ">
-        <img src="https://gw.alipayobjects.com/zos/rmsportal/buKnoKlvQeEzYxttqrFh.svg" alt="">
+        <img class="selected" src="/img/index/Ecology-title-5.png" alt="">
+        <img src="/img/index/Ecology-title-5-default.png" alt="">
         <h4>车生活</h4>
       </div>
       <div class="scenario-item ">
-        <img src="https://gw.alipayobjects.com/zos/rmsportal/buKnoKlvQeEzYxttqrFh.svg" alt="">
+        <img class="selected" src="/img/index/Ecology-title-6.png" alt="">
+        <img src="/img/index/Ecology-title-6-default.png" alt="">
         <h4>商城</h4>
       </div>
     </div>
@@ -57,7 +63,74 @@
       </div>
     </div>
 
+    <div class="scenario-detail-item">
+      <div class="scenario-detail-left">
+        <h4>汽车交易</h4>
+        <p>融资租赁、以组代购，全方位解决您购车成本高、资金压力大、服务响应慢、购车保障低等担忧！<br />
+          人人有车、人人用车、人人爱车”我们一直竭诚付出，十分的努力只为您一分的满意！
+        </p>
+      </div>
+      <div style="right:-170px;bottom:-70px" class="scenario-detail-right"><img src="/img/index/Ecology-2.png" alt=""></div>
+      <div class="scenario-download">
+        <a href="javascript:">立即下载</a>
+        <img src="http://www.songcw.com/static/img/page4/qrcode-img.png" alt="">
+      </div>
+    </div>
 
+    <div class="scenario-detail-item">
+      <div class="scenario-detail-left">
+        <h4>租赁出行</h4>
+        <p>国内租、分时租、集团租，您所有的出行需求，我们都用心体会，只为给您带来极致的出行体验！<br />
+          您每一次出行都怀揣着家人的牵挂，为您提供最优质的服务和保障，是我们的宗旨，安全出行，乐享自由！
+        </p>
+      </div>
+      <div style="right:-110px;"  class="scenario-detail-right"><img src="/img/index/Ecology-3.png" alt=""></div>
+      <div class="scenario-download">
+        <a href="javascript:">立即下载</a>
+        <img src="http://www.songcw.com/static/img/page4/qrcode-img.png" alt="">
+      </div>
+    </div>
+
+    <div class="scenario-detail-item">
+      <div class="scenario-detail-left">
+        <h4>颂车云盒</h4>
+        <p>依托云技术，嵌入车联网，一键启动、远程熄火、数据监测、车辆防盗、门窗智能锁、一键寻车，摆脱钥匙遗忘困扰！<br />
+          用车风险预警，险情自动化推送，一键快速救援，保障用车安全！
+        </p>
+      </div>
+      <div style="right:-50px;"  class="scenario-detail-right"><img src="/img/index/Ecology-4.png" alt=""></div>
+      <div class="scenario-download">
+        <a href="javascript:">立即下载</a>
+        <img src="http://www.songcw.com/static/img/page4/qrcode-img.png" alt="">
+      </div>
+    </div>
+
+    <div class="scenario-detail-item">
+      <div class="scenario-detail-left">
+        <h4>车生活</h4>
+        <p> 整合汽车美容、维修保养、汽车保险、道路救援等资源，提供全面车生活服务，为万千车主提供便捷的车生活服务，提高车主的车生活品质！
+        </p>
+      </div>
+      <div style="right:-80px;" class="scenario-detail-right"><img src="/img/index/Ecology-5.png" alt=""></div>
+      <div class="scenario-download">
+        <a href="javascript:">立即下载</a>
+        <img src="http://www.songcw.com/static/img/page4/qrcode-img.png" alt="">
+      </div>
+    </div>
+
+
+    <div class="scenario-detail-item">
+      <div class="scenario-detail-left">
+        <h4>商城</h4>
+        <p>搭配积分商场，兑换您所想所需的商品，实用的、好玩的，刻不容缓；配套礼品商城，私人定制礼品，送礼物不再发愁！
+        </p>
+      </div>
+      <div style="right:-100px; bottom: -90px"  class="scenario-detail-right"><img src="/img/index/Ecology-6.png" alt=""></div>
+      <div class="scenario-download">
+        <a href="javascript:">立即下载</a>
+        <img src="http://www.songcw.com/static/img/page4/qrcode-img.png" alt="">
+      </div>
+    </div>
   </div>
 </div>
 
@@ -111,7 +184,11 @@
 </div>
 
 <script>
+  $('.scenario-item').click(function () {
+    $(this).addClass('selected').siblings().removeClass('selected');
+    $('.scenario-detail-item').eq($(this).index()).addClass('selected').siblings().removeClass('selected');
+  });
   $('.hy-friends-item').mouseover(function () {
     $(this).addClass('selected').siblings().removeClass('selected');
-  })
+  });
 </script>
