--- a/views/joinus.hbs
+++ b/views/joinus.hbs
@@ -27,37 +27,37 @@
       <ul>
         <li>
           <div class="wraper">
-            <img src="http://www.ulandian.com/imgs/supplyC1.png" alt="">
+            <img src="/img/joinus/Bright-1.png" alt="">
             <h4>一体化在线管理</h4>
-            <p>这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述</p>
+            <p>打破传统模式，提供集客户、团队、订单、签约、合同、结算、财务等一体化在线管理，简化流程，规范管理。</p>
           </div>
         </li>
         <li>
           <div class="wraper">
-            <img src="http://www.ulandian.com/imgs/supplyC1.png" alt="">
-            <h4>一体化在线管理</h4>
-            <p>这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述</p>
+            <img src="/img/joinus/Bright-2.png" alt="">
+            <h4>线上营销工具</h4>
+            <p>提供商户自有线上营销工具，商户主导营销方式，借助平台品牌效应，增加营销方式变现力度。</p>
           </div>
         </li>
         <li>
           <div class="wraper">
-            <img src="http://www.ulandian.com/imgs/supplyC1.png" alt="">
-            <h4>一体化在线管理</h4>
-            <p>这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述</p>
+            <img src="/img/joinus/Bright-3.png" alt="">
+            <h4>用户裂变业务量</h4>
+            <p>平台搭建裂变渠道，统一宣传推广，获取并裂变用户，帮助商户引流客户，提高商户业务增量。</p>
           </div>
         </li>
         <li>
           <div class="wraper">
-            <img src="http://www.ulandian.com/imgs/supplyC1.png" alt="">
-            <h4>一体化在线管理</h4>
-            <p>这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述</p>
+            <img src="/img/joinus/Bright-4.png" alt="">
+            <h4>风控系统保障</h4>
+            <p>免费提供风控系统，多维度监控用户数据，警示用户风险程度，更有效地保障商户成交安全。</p>
           </div>
         </li>
         <li>
           <div class="wraper">
-            <img src="http://www.ulandian.com/imgs/supplyC1.png" alt="">
-            <h4>一体化在线管理</h4>
-            <p>这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述</p>
+            <img src="/img/joinus/Bright-5.png" alt="">
+            <h4>车联网生态圈集成</h4>
+            <p>集成车联网生态圈，提供用户全方位服务，加强用户体验建设，增强用户黏性，提高商户复购率。</p>
           </div>
         </li>
       </ul>
@@ -76,72 +76,72 @@
       <ul>
         <li>
           <div class="wraper">
-            <img src="http://www.ulandian.com/imgs/supplyC1.png" alt="">
-            <h4>一体化在线管理</h4>
-            <p>这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述</p>
+            <img src="/img/joinus/Advantage (1).png" alt="">
+            <h4>集采、即售</h4>
+            <p>集中规模采购，享受市场折扣价，降低商户成本；提供在线即售平台，规避商户资产堆积风险。</p>
           </div>
         </li>
         <li>
           <div class="wraper">
-            <img src="http://www.ulandian.com/imgs/supplyC1.png" alt="">
-            <h4>一体化在线管理</h4>
-            <p>这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述</p>
+            <img src="/img/joinus/Advantage (2).png" alt="">
+            <h4>客户资源及共享</h4>
+            <p>整合租赁、汽车交易、维护保养、金融、车生活等行业资源，形成统一闭环，各行业间客户资源共享。</p>
           </div>
         </li>
         <li>
           <div class="wraper">
-            <img src="http://www.ulandian.com/imgs/supplyC1.png" alt="">
-            <h4>一体化在线管理</h4>
-            <p>这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述</p>
+            <img src="/img/joinus/Advantage (3).png" alt="">
+            <h4>品牌效应</h4>
+            <p>树立品牌形象，打造品牌影响力，扩张用户群体，商户借助颂车品牌效应，收益日新月异。</p>
           </div>
         </li>
         <li>
           <div class="wraper">
-            <img src="http://www.ulandian.com/imgs/supplyC1.png" alt="">
-            <h4>一体化在线管理</h4>
-            <p>这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述</p>
+            <img src="/img/joinus/Advantage (4).png" alt="">
+            <h4>资金安全</h4>
+            <p>接入用户征信及认证识别系统，聚合支付，资金流透明可追溯，强有力保障商户资金安全。</p>
           </div>
         </li>
         <li>
           <div class="wraper">
-            <img src="http://www.ulandian.com/imgs/supplyC1.png" alt="">
-            <h4>一体化在线管理</h4>
-            <p>这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述</p>
+            <img src="/img/joinus/Advantage (5).png" alt="">
+            <h4>智能比价</h4>
+            <p>新车、二手车智能评估系统，实时掌握市场价格，帮助商户比价，动态调整价格，提高成交量。</p>
           </div>
         </li>
         <li>
           <div class="wraper">
-            <img src="http://www.ulandian.com/imgs/supplyC1.png" alt="">
-            <h4>一体化在线管理</h4>
-            <p>这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述</p>
+            <img src="/img/joinus/Advantage (6).png" alt="">
+            <h4>业务培训</h4>
+            <p>一对一专人提供标准培训，帮助商户使用各在线工具；委派专人解决各工具使用过程中的疑难杂症。</p>
           </div>
         </li>
         <li>
           <div class="wraper">
-            <img src="http://www.ulandian.com/imgs/supplyC1.png" alt="">
-            <h4>一体化在线管理</h4>
-            <p>这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述</p>
+            <img src="/img/joinus/Advantage (7).png" alt="">
+            <h4>技术支持</h4>
+            <p>结合商户线下业务，提供全面的技术支持，采用新技术将线下业务系统化、线上化，帮助商户拥抱互联网。</p>
           </div>
         </li>
         <li>
           <div class="wraper">
-            <img src="http://www.ulandian.com/imgs/supplyC1.png" alt="">
-            <h4>一体化在线管理</h4>
-            <p>这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述</p>
+            <img src="/img/joinus/Advantage (8).png" alt="">
+            <h4>平台系统支撑</h4>
+            <p>提供免费的商户SAAS服务系统，接入移动互联网，帮助商户随时、随地、快速的处理业务。</p>
           </div>
         </li>
         <li>
           <div class="wraper">
-            <img src="http://www.ulandian.com/imgs/supplyC1.png" alt="">
-            <h4>一体化在线管理</h4>
-            <p>这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述</p>
+            <img src="/img/joinus/Advantage (9).png" alt="">
+            <h4>金融支撑</h4>
+            <p>提供多元化金融产品，简化手续及办理流程，低利率、高效率解决资金周转难题。</p>
           </div>
         </li>
         <li>
           <div class="wraper">
-            <img src="http://www.ulandian.com/imgs/supplyC1.png" alt="">
-            <h4>一体化在线管理</h4>
-            <p>这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述</p>
+            <img src="/img/joinus/Advantage (10).png" alt="">
+            <h4>保姆式托管</h4>
+            <p>商户线上业务全流程系统化，涵盖各个环节，操作简便快捷，保姆式托管，做一位真正的翘脚老板。</p>
           </div>
         </li>
       </ul>
@@ -160,15 +160,18 @@
     <div class="container">
       <div class="text">
         <dl>
-          <dt>打造千万粉丝量的轻连锁品牌便利店</dt>
+          <dt></dt>
           <dd>
-            <i>● </i>现累计签约网点逾35000家，日均流量达300万人次
+            <i>● </i>公司成立时间大于1年，公司及股东无不良记录
           </dd>
           <dd>
-            <i>● </i>签约网点皆处于社区核心位置
+            <i>● </i>取得行政许可资质
           </dd>
           <dd>
-            <i>● </i>已覆盖全国超过80个主要城市
+            <i>● </i>有固定的经营场地
+          </dd>
+          <dd>
+            <i>● </i>认可颂车品牌及模式
           </dd>
         </dl>
       </div>
@@ -186,7 +189,7 @@
         </div>
       </div>
       <div class="container">
-        <img src="http://www.ulandian.com/imgs/supplyE1.png" alt="">
+        <img src="/img/joinus/Process.png" alt="">
         <a href="javascript:" @click="merchantReg" class="supply-join">携手共创美好</a>
       </div>
     </div>
