--- a/views/index.hbs
+++ b/views/index.hbs
@@ -52,11 +52,10 @@
     <div class="scenario-detail-item selected">
       <div class="scenario-detail-left">
         <h4>颂车社交</h4>
-        <p>闲暇时光，您可以在这里体验各色各样的车旅人生，发现更多有趣好玩内容，您需要的或许正是我们专注的！<br />
-          您也可以分享您精彩炫酷的汽车生活，分享美好的同时或许下一位明星就是您！
-        </p>
+        <p>闲暇时光，您可以在这里体验各色各样的车旅人生，发现更多有趣好玩内容，您需要的或许正是我们专注的！</p>
+        <p>您也可以分享您精彩炫酷的汽车生活，分享美好的同时或许下一位明星就是您！</p>
       </div>
-      <div class="scenario-detail-right"><img src="/img/index/Ecology-1.png" alt=""></div>
+      <div class="scenario-detail-right"><img style="width: 80%;" src="/img/index/Ecology-1.png" alt=""></div>
       <div class="scenario-download">
         <a href="javascript:">立即下载</a>
         <img src="http://www.songcw.com/static/img/page4/qrcode-img.png" alt="">
@@ -70,7 +69,7 @@
           人人有车、人人用车、人人爱车”我们一直竭诚付出，十分的努力只为您一分的满意！
         </p>
       </div>
-      <div style="right:-170px;bottom:-70px" class="scenario-detail-right"><img src="/img/index/Ecology-2.png" alt=""></div>
+      <div style="right:-140px;bottom:-60px" class="scenario-detail-right"><img style="width: 90%" src="/img/index/Ecology-2.png" alt=""></div>
       <div class="scenario-download">
         <a href="javascript:">立即下载</a>
         <img src="http://www.songcw.com/static/img/page4/qrcode-img.png" alt="">
@@ -84,7 +83,7 @@
           您每一次出行都怀揣着家人的牵挂，为您提供最优质的服务和保障，是我们的宗旨，安全出行，乐享自由！
         </p>
       </div>
-      <div style="right:-110px;"  class="scenario-detail-right"><img src="/img/index/Ecology-3.png" alt=""></div>
+      <div style="right:-90px;"  class="scenario-detail-right"><img style="width: 83%" src="/img/index/Ecology-3.png" alt=""></div>
       <div class="scenario-download">
         <a href="javascript:">立即下载</a>
         <img src="http://www.songcw.com/static/img/page4/qrcode-img.png" alt="">
@@ -98,7 +97,7 @@
           用车风险预警，险情自动化推送，一键快速救援，保障用车安全！
         </p>
       </div>
-      <div style="right:-50px;"  class="scenario-detail-right"><img src="/img/index/Ecology-4.png" alt=""></div>
+      <div style="bottom:-30px;right:-40px;"  class="scenario-detail-right"><img style="width: 90%" src="/img/index/Ecology-4.png" alt=""></div>
       <div class="scenario-download">
         <a href="javascript:">立即下载</a>
         <img src="http://www.songcw.com/static/img/page4/qrcode-img.png" alt="">
@@ -111,7 +110,7 @@
         <p> 整合汽车美容、维修保养、汽车保险、道路救援等资源，提供全面车生活服务，为万千车主提供便捷的车生活服务，提高车主的车生活品质！
         </p>
       </div>
-      <div style="right:-80px;" class="scenario-detail-right"><img src="/img/index/Ecology-5.png" alt=""></div>
+      <div style="right:-70px;" class="scenario-detail-right"><img style="width: 78%" src="/img/index/Ecology-5.png" alt=""></div>
       <div class="scenario-download">
         <a href="javascript:">立即下载</a>
         <img src="http://www.songcw.com/static/img/page4/qrcode-img.png" alt="">
@@ -138,27 +137,27 @@
   <div class="scenario-column">
     <h1>科技赋能</h1>
     <h3>Technology Empowerment</h3>
-    <div style="position: relative; height: 400px; margin: 0px; padding: 0px;">
+    <div style="position: relative; height: 330px; margin: 0px; padding: 0px;">
       <div style="z-index: 0; font-size: 0px; position: absolute; left: 0px; top: 0px; width: 100%; display: block; transition: opacity 0.3s linear;">
-        <div style="display: inline-block; vertical-align: top; width: 270px; height: 360px; border-radius: 2px 2px 0px 0px; margin: 0px 20px 0px 0px; border: 1px solid rgb(234, 234, 234); box-sizing: border-box; transition: transform 0.2s linear, -webkit-transform 0.2s linear;">
+        <div style="display: inline-block; vertical-align: top; width: 270px; height: 285px; border-radius: 2px 2px 0px 0px; margin: 0px 20px 0px 0px; border: 1px solid rgb(234, 234, 234); box-sizing: border-box; transition: transform 0.2s linear, -webkit-transform 0.2s linear;">
           <img src="/img/index/Empowerment-1.png" alt="" style="width: 270px; height: 180px; border-radius: 2px 2px 0px 0px; position: relative; left: -1px; border: 0px;">
           <h5 style="margin-top: 20px; font-size: 20px; line-height: 28px; color: rgb(51, 51, 51); font-weight: 600;">车联网</h5>
-          <p style="margin: 14px 15px 0px; color: rgb(51, 51, 51); font-weight: 400; font-size: 12px; line-height: 20px; height: 60px;">采用车联网技术，驾驶更智能、更便捷！</p>
+          <p style="margin: 15px 5px 0px; color: rgb(51, 51, 51); font-weight: 400; font-size: 14px; line-height: 20px; height: 30px;">采用车联网技术，驾驶更智能、更便捷！</p>
         </div>
-        <div style="display: inline-block; vertical-align: top; width: 270px; height: 360px; border-radius: 2px 2px 0px 0px; margin: 0px 20px 0px 0px; border: 1px solid rgb(234, 234, 234); box-sizing: border-box; transition: transform 0.2s linear, -webkit-transform 0.2s linear;">
+        <div style="display: inline-block; vertical-align: top; width: 270px; height: 285px; border-radius: 2px 2px 0px 0px; margin: 0px 20px 0px 0px; border: 1px solid rgb(234, 234, 234); box-sizing: border-box; transition: transform 0.2s linear, -webkit-transform 0.2s linear;">
           <img src="/img/index/Empowerment-2.png" alt="" style="width: 270px; height: 180px; border-radius: 2px 2px 0px 0px; position: relative; left: -1px; border: 0px;">
           <h5 style="margin-top: 20px; font-size: 20px; line-height: 28px; color: rgb(51, 51, 51); font-weight: 600;">在线仲裁</h5>
-          <p style="margin: 14px 15px 0px; color: rgb(51, 51, 51); font-weight: 400; font-size: 12px; line-height: 20px; height: 60px;">提供在线仲裁业务，线上交易有保证！</p>
+          <p style="margin: 15px 5px 0px; color: rgb(51, 51, 51); font-weight: 400; font-size: 14px; line-height: 20px; height: 30px;">提供在线仲裁业务，线上交易有保证！</p>
         </div>
-        <div style="display: inline-block; vertical-align: top; width: 270px; height: 360px; border-radius: 2px 2px 0px 0px; margin: 0px 20px 0px 0px; border: 1px solid rgb(234, 234, 234); box-sizing: border-box; transition: transform 0.2s linear, -webkit-transform 0.2s linear;">
+        <div style="display: inline-block; vertical-align: top; width: 270px; height: 285px; border-radius: 2px 2px 0px 0px; margin: 0px 20px 0px 0px; border: 1px solid rgb(234, 234, 234); box-sizing: border-box; transition: transform 0.2s linear, -webkit-transform 0.2s linear;">
           <img src="/img/index/Empowerment-3.png" alt="" style="width: 270px; height: 180px; border-radius: 2px 2px 0px 0px; position: relative; left: -1px; border: 0px;">
           <h5 style="margin-top: 20px; font-size: 20px; line-height: 28px; color: rgb(51, 51, 51); font-weight: 600;">聚合支付</h5>
-          <p style="margin: 14px 15px 0px; color: rgb(51, 51, 51); font-weight: 400; font-size: 12px; line-height: 20px; height: 60px;">聚合第三方支付，资金安全有保障！</p>
+          <p style="margin: 15px 5px 0px; color: rgb(51, 51, 51); font-weight: 400; font-size: 14px; line-height: 20px; height: 30px;">聚合第三方支付，资金安全有保障！</p>
         </div>
-        <div style="display: inline-block; vertical-align: top; width: 270px; height: 360px; border-radius: 2px 2px 0px 0px; margin: 0px 20px 0px 0px; border: 1px solid rgb(234, 234, 234); box-sizing: border-box; transition: transform 0.2s linear, -webkit-transform 0.2s linear;">
+        <div style="display: inline-block; vertical-align: top; width: 270px; height: 285px; border-radius: 2px 2px 0px 0px; margin: 0px 0px 0px 0px; border: 1px solid rgb(234, 234, 234); box-sizing: border-box; transition: transform 0.2s linear, -webkit-transform 0.2s linear;">
           <img src="/img/index/Empowerment-4.png" alt="" style="width: 270px; height: 180px; border-radius: 2px 2px 0px 0px; position: relative; left: -1px; border: 0px;">
           <h5 style="margin-top: 20px; font-size: 20px; line-height: 28px; color: rgb(51, 51, 51); font-weight: 600;">金融风控</h5>
-          <p style="margin: 14px 15px 0px; color: rgb(51, 51, 51); font-weight: 400; font-size: 12px; line-height: 20px; height: 60px;">完善的风控系统，规避金融风险更安全！</p>
+          <p style="margin: 15px 5px 0px; color: rgb(51, 51, 51); font-weight: 400; font-size: 14px; line-height: 20px; height: 30px;">完善的风控系统，规避金融风险更安全！</p>
         </div>
       </div>
     </div>
@@ -187,6 +186,11 @@
   $('.scenario-item').click(function () {
     $(this).addClass('selected').siblings().removeClass('selected');
     $('.scenario-detail-item').eq($(this).index()).addClass('selected').siblings().removeClass('selected');
+  });
+  $('.scenario-download a').mouseover(function () {
+    $(this).siblings('img').show();
+  }).mouseout(function () {
+    $(this).siblings('img').hide();
   });
   $('.hy-friends-item').mouseover(function () {
     $(this).addClass('selected').siblings().removeClass('selected');
