--- a/views/joinus.hbs
+++ b/views/joinus.hbs
@@ -157,21 +157,22 @@
         <p>Franchise Conditions</p>
       </div>
     </div>
-    <div class="container">
+
+    <div style="width: 920px" class="container ">
       <div class="text">
         <dl>
-          <dt></dt>
-          <dd>
-            <i>● </i>公司成立时间大于1年，公司及股东无不良记录
+          <!--<dt></dt>-->
+          <dd class="left">
+            <i>1</i>公司成立时间大于1年，公司及股东无不良记录
           </dd>
-          <dd>
-            <i>● </i>取得行政许可资质
+          <dd class="right">
+            <i>2</i>取得行政许可资质
           </dd>
-          <dd>
-            <i>● </i>有固定的经营场地
+          <dd class="left">
+            <i>3</i>有固定的经营场地
           </dd>
-          <dd>
-            <i>● </i>认可颂车品牌及模式
+          <dd class="right">
+            <i>4</i>认可颂车品牌及模式
           </dd>
         </dl>
       </div>
@@ -188,7 +189,7 @@
           <p>Franchise Process</p>
         </div>
       </div>
-      <div class="container">
+      <div style="width: 988px" class="container">
         <img src="/img/joinus/Process.png" alt="">
         <a href="javascript:" @click="merchantReg" class="supply-join">携手共创美好</a>
       </div>
