--- a/views/index.hbs
+++ b/views/index.hbs
@@ -65,9 +65,8 @@
     <div class="scenario-detail-item">
       <div class="scenario-detail-left">
         <h4>汽车交易</h4>
-        <p>融资租赁、以组代购，全方位解决您购车成本高、资金压力大、服务响应慢、购车保障低等担忧！<br />
-          人人有车、人人用车、人人爱车”我们一直竭诚付出，十分的努力只为您一分的满意！
-        </p>
+        <p>融资租赁、以组代购，全方位解决您购车成本高、资金压力大、服务响应慢、购车保障低等担忧！</p>
+        <p>人人有车、人人用车、人人爱车”我们一直竭诚付出，十分的努力只为您一分的满意！</p>
       </div>
       <div style="right:-140px;bottom:-60px" class="scenario-detail-right"><img style="width: 90%" src="/img/index/Ecology-2.png" alt=""></div>
       <div class="scenario-download">
@@ -79,9 +78,8 @@
     <div class="scenario-detail-item">
       <div class="scenario-detail-left">
         <h4>租赁出行</h4>
-        <p>国内租、分时租、集团租，您所有的出行需求，我们都用心体会，只为给您带来极致的出行体验！<br />
-          您每一次出行都怀揣着家人的牵挂，为您提供最优质的服务和保障，是我们的宗旨，安全出行，乐享自由！
-        </p>
+        <p>国内租、分时租、集团租，您所有的出行需求，我们都用心体会，只为给您带来极致的出行体验！</p>
+        <p>您每一次出行都怀揣着家人的牵挂，为您提供最优质的服务和保障，是我们的宗旨，安全出行，乐享自由！</p>
       </div>
       <div style="right:-90px;"  class="scenario-detail-right"><img style="width: 83%" src="/img/index/Ecology-3.png" alt=""></div>
       <div class="scenario-download">
@@ -93,9 +91,8 @@
     <div class="scenario-detail-item">
       <div class="scenario-detail-left">
         <h4>颂车云盒</h4>
-        <p>依托云技术，嵌入车联网，一键启动、远程熄火、数据监测、车辆防盗、门窗智能锁、一键寻车，摆脱钥匙遗忘困扰！<br />
-          用车风险预警，险情自动化推送，一键快速救援，保障用车安全！
-        </p>
+        <p>依托云技术，嵌入车联网，一键启动、远程熄火、数据监测、车辆防盗、门窗智能锁、一键寻车，摆脱钥匙遗忘困扰！</p>
+        <p>用车风险预警，险情自动化推送，一键快速救援，保障用车安全！</p>
       </div>
       <div style="bottom:-30px;right:-40px;"  class="scenario-detail-right"><img style="width: 90%" src="/img/index/Ecology-4.png" alt=""></div>
       <div class="scenario-download">
