--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -18,7 +18,7 @@
 <body>
 
 <div id="ice-container">
-  <div class="ice-layout ice-blank-layout" style="min-height: 100vh;">
+  <div class="ice-layout ice-blank-layout">
     <div style="width: 100%; min-width: 1280px;">
       {{>header}}
       {{{body}}}
