--- a/views/joinus.hbs
+++ b/views/joinus.hbs
@@ -148,7 +148,6 @@
     </div>
   </div>
 
-
   <a href="" title="" name="franchiseconditions"></a>
   <div class="section2">
     <div class="title-wrap ">
@@ -179,9 +178,8 @@
     </div>
   </div>
 
-
+  <a href="" title="" name="franchiseprocess"></a>
   <div id="franchiseProcess">
-    <a href="" title="" name="franchiseprocess"></a>
     <div class="section5">
       <div class="title-wrap ">
         <div class="title">
@@ -339,11 +337,11 @@
               layer.msg('请选择您所在城市');
               return false;
             }
-            if (this.$data.submitForm.contactName === '') {
+            if (this.$data.submitForm.contactName.replace(/\s+/g, "") === '') {
               layer.msg('联系人不能为空');
               return false;
             }
-            if (this.$data.submitForm.contactTel === '') {
+            if (this.$data.submitForm.contactTel.replace(/\s+/g, "") === '') {
               layer.msg('手机号码不能为空');
               return false;
             }
@@ -375,8 +373,5 @@
     </script>
 
   </div>
-
-
-</div>
 
 </div>
