换图 改样式

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -65,7 +65,7 @@
     <div class="scenario-detail-item">
       <div class="scenario-detail-left">
         <h4>汽车交易</h4>
-        <p>融资租赁、以组代购，全方位解决您购车成本高、资金压力大、服务响应慢、购车保障低等担忧！</p>
+        <p>融资租赁、以租代购，全方位解决您购车成本高、资金压力大、服务响应慢、购车保障低等担忧！</p>
         <p>人人有车、人人用车、人人爱车”我们一直竭诚付出，十分的努力只为您一分的满意！</p>
       </div>
       <div style="right:-140px;bottom:-60px" class="scenario-detail-right"><img style="width: 90%" src="/img/index/Ecology-2.png" alt=""></div>
@@ -118,8 +118,8 @@
     <div class="scenario-detail-item">
       <div class="scenario-detail-left">
         <h4>商城</h4>
-        <p>搭配积分商场，兑换您所想所需的商品，实用的、好玩的，刻不容缓；配套礼品商城，私人定制礼品，送礼物不再发愁！
-        </p>
+        <p>搭配积分商场，兑换您所想所需的商品，实用的、好玩的，刻不容缓！</p>
+        <p>配套礼品商城，私人定制礼品，送礼物不再发愁！</p>
       </div>
       <div style="right:-100px; bottom: -90px"  class="scenario-detail-right"><img src="/img/index/Ecology-6.png" alt=""></div>
       <div class="scenario-download">
